css/main.css
:root {
    /* colours */
    /* white */
    --white-0: rgb(255,255,255);
    --white-1: rgb(220,220,220);
    --white-2: rgb(180,180,180);
    --white-3: rgb(130,130,130);
    --white-4: rgba(110,110,110);

    /* grey */
    --grey-0: rgb(50,50,50);
    --grey-1: rgb(70,70,70);
    --grey-2: rgb(80,80,80);
    --grey-3: rgb(90, 90, 90);
    --grey-4: rgb(95, 95, 95);
    --grey-5: rgb(100, 100, 100);

    /* black */
    --black-0: rgba(40, 40, 40, 80);
    --black-1: rgba(40, 40, 40, 50);
    --black-2: rgba(40, 40, 40, 20);

    /* green */
    --green-0: #16B3C9;
    --green-1: rgb(17 144 163);
    --green-2: rgb(14 109 124);
    --green-3: #176267;
    /* purple */
    --purple-purp: rgb(106 88 175);
    --purple-pink: rgb(143 43 133);
    --purple-dark: rgb(126, 36, 136);

    /* shadows */
    /* light */
    --shadow-light-0: drop-shadow(2px 2px 8px var(--grey-1));
    --shadow-light-1: drop-shadow(2px 2px 8px var(--grey-2));

    /* dark */
    --shadow-dark-0: drop-shadow(1px 1px 4px var(--black-1));
    --shadow-dark-1: drop-shadow(1px 1px 4px var(--black-2));

    /* gradients */
    --primary-grad: linear-gradient(163deg, var(--grey-0) 42%, var(--grey-1) 90.61%);
    --concert-grad: radial-gradient(80.83% 80.83% at 50% 50%, var(--purple-purp) 20%, var(--purple-pink) 100%);
    --frost-grad: linear-gradient(135deg, rgba(255 255 255 / 0.1) 0%, rgba(233 253 255 / 0.2) 22%, rgba(255 255 255 / 0.05) 47%, rgba(230 255 255 / 0.2) 71%, rgba(255 255 255 / 0.1) 100%);

    /* fonts */
    --font-weight-300: 300;
    --font-weight-400: 400;
    --font-weight-500: 500;
    --font-weight-600: 600;
    --font-weight-700: 700;
    --font-weight-800: 800;
    --font-weight-900: 900;

    /* radius */
    --radius-xl: 2.4rem;
    --radius-lg: 1.2rem;
    --radius-md: 0.8rem;
    --radius-sm: 0.4rem;

    /* variables to change with js */
    --show-hide-icon: url('../icons/show_x24.svg');
    --search-cancel-icon: url('../icons/search_x24.svg');
    --member-tooltip: '';

    --main-grad: linear-gradient(90deg, var(--green-3) 0%, var(--green-0) 100%);
    --filter-bar: linear-gradient(to right, var(--white-4) 25%, var(--green-0) 20%, var(--white-4) 60%);

}


/* main */
html {
    color-scheme: dark light;
    font-size: 62.5%;
}

body {
    margin: 0 auto;
    background: var(--primary-grad);
    font-family: "Inter", sans-serif;
    font-size: 1.6rem;
    color: var(--white-0);
}

/* spotify player */
iframe {
    color-scheme: normal;
    padding: 1.2rem 0 0 0;
}

/*Mapbox styling*/

#map {
    border-radius:  var(--radius-md);
    width: 100%;
    max-height: 100%;
    position: relative;
    @media (max-width: 800px) {
        max-height: 40rem;
        aspect-ratio: 1/1;
        align-self: center;
    }
}

#map-controls {
    & > * {
        filter: none;
        outline: var(--grey-1) 0.1rem solid;
        justify-content: center;
        align-items: center;
        &:hover {
            background: var(--grey-1);
        }
    }
}



.marker {
    background-image: url("/icons/marker-3d.svg");
    background-size: cover;
    width: 2rem;
    height: 5rem;
    cursor: pointer;
}

[class^="mapbox"] * {
    &:focus-visible {
        border: none;
        outline: none;
    }
}

.mapboxgl-popup-tip {
    z-index: 0;
    scale: 1.1;
}

.mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip, .mapboxgl-popup-anchor-bottom-left .mapboxgl-popup-tip, .mapboxgl-popup-anchor-bottom-right .mapboxgl-popup-tip {
    border-top-color: var(--grey-1) !important;
}
.mapboxgl-popup-anchor-top-right .mapboxgl-popup-tip {
    align-self: auto !important;
    position: relative;
    left: 22.8rem !important;
    top: 0.5rem !important;
    scale: 1.5 !important;
}

.mapboxgl-popup-anchor-top-left .mapboxgl-popup-tip {
    align-self: auto !important;
    position: relative;
    right: -0.2rem  !important;
    top: 0.5rem !important;
    scale: 1.5 !important;
}

.mapboxgl-popup-anchor-bottom-right .mapboxgl-popup-tip {
    align-self: auto !important;
    position: relative;
    left: 22.8rem !important;
    bottom: 0.5rem !important;
    scale: 1.5 !important;
}

.mapboxgl-popup-anchor-bottom-left .mapboxgl-popup-tip {
    align-self: auto !important;
    position: relative;
    right: -0.2rem !important;
    bottom: 0.5rem !important;
    scale: 1.5 !important;
}

.mapboxgl-popup-anchor-top .mapboxgl-popup-tip, .mapboxgl-popup-anchor-top-left .mapboxgl-popup-tip, .mapboxgl-popup-anchor-top-right .mapboxgl-popup-tip{
    border-bottom-color: var(--grey-1) !important;
}

.mapboxgl-popup-anchor-left .mapboxgl-popup-tip {
    border-right-color: var(--grey-1) !important;
}

.mapboxgl-popup-anchor-right .mapboxgl-popup-tip {
    border-left-color: var(--grey-1) !important;
}

.mapboxgl-popup-content {
    color: var(--white-1);
    border-radius: 0.8rem !important;
    padding: 1.6rem 1.2rem 1.2rem !important;
    display: flex !important;
    flex-direction: column !important;
    gap: 1.2rem !important;
    background-color: var(--grey-1) !important;
    max-width: 24rem;
    & > * {
        margin: 0;
    }
    & .content {
        padding: 0 !important;
        border-radius: var(--radius-sm) !important;
        width: 100% !important;
        align-items: center !important;
        gap: 1.2rem !important;
        position: relative;
        max-height: 9.2rem;
        & .small {
            top: calc(50% - 0.76rem);
            left: 7.6rem;
        }
        & .date {
            scroll-snap-align: start;
            padding: 0 0.4rem;
        }
        &:hover {
            background: none;
        }
        &.scroll {
            overflow-x: auto;
            scroll-snap-type: x mandatory;
            &::-webkit-scrollbar-track {
                background: var(--grey-1);
            }
            /* Adjust scrollbar dimensions */
            &::-webkit-scrollbar {
                width: 0.8rem;
                height: 0.8rem;
            }
        }
}
}
/* ... */

